1999-04-01  Andrew T. Veliath  <andrewtv@usa.net>

	* fvwm/functions.c (func_config): Make GNOMEButton uppercase.

1999-04-02  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* configure.in: 
	* acconfig.h:  
	* fvwm/misc.c (RaiseWindow): Remove EXCEED_HACK, always compile
	the hack.

1999-04-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/resize.c (resize_window): experimental patch: warp pointer to
	the sides/corners when pressed near the edge (within 20 pixels)

	* fvwm/events.c (HandleButtonPress): clicktofocusdoesntpassclick works
	with no-input windows now

	* fvwm/builtins.c (Maximize): consider desk number when checking if
	window is on current page

1999-04-01  Andrew T. Veliath  <andrewtv@usa.net>

	* fvwm/builtins.c (SetDeskSize): Call GNOME_SetAreaCount.

	* fvwm/misc.h: Add proto for GNOME_SetAreaCount.

	* fvwm/Makefile.am (GNOME): If GNOME hints disabled, avoid
	compilation of gnome.c.

	* configure.in: Turn --enable-gnome into an smr_SWITCH macro and
	use an AM_CONDITIONAL.

1999-04-01  Hippo

	* fvwm/*: #define PICK_TRUECOLOR and fvwm will use a truecolor visual
	rather than the default.

Wed Mar 31 20:32:27 1999  Steve ROBBINS  <stever@bottom.bic.mni.mcgill.ca (Steve ROBBINS)>

	* fvwm/menus.c (menuShortcuts): removed C++-style comment.

	* acconfig.h (alloca stuff): moved to @BOTTOM@ section, because it
	depends on the definition of HAVE_ALLOCA_H.  Also removed the
	ifndef _GNUC_; nobody knows why we can't include <alloca.h> when
	compiling with gcc.  On the contrary, this file provides a
	prototype for alloca() which is a good thing.

1999-04-01  Tomas Ogren  <stric@ing.umu.se>

	* fvwm/move.c (moveLoop): Fixed typo: window_being_moved ->
	window_being_moved_opaque

1999-04-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress): any modifier works with
	ClickToFocus

	* fvwm/menus.c (menuShortcuts): fixed coredump in multiple hotkeys and
	fixed problem with exactly two identical hotkeys where one was the